# Naca0012carangiform

./: .clang-format  .gitignore  CMakeLists.txt  IBNACA0012Kinematics.cpp  IBNACA0012Kinematics.h  README.md  REORGANIZATION_NOTES.md  example.cpp  input2d
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: c-cpp.yml
scripts/: run_simulation.sh
